--- a/src/styles/Foods.scss
+++ b/src/styles/Foods.scss
@@ -1,3 +1,9 @@
 .foods-title {
   border-bottom: 6px solid #2a9d8f;
 }
+
+.decks {
+  flex-wrap: wrap;
+  justify-content: start;
+}
+
